--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,13 +1,13 @@
 upstream demo {
-    {% for server in groups.webserver %}
-        server {{ server }}
-    {% endfor %}
+{% for server in groups.webserver %}
+    server {{ server }};
+{% endfor %}
 }
 
 server {
-    listen: 80
+    listen 80;
 
     location / {
-        proxy_pass http://demo
+        proxy_pass http://demo;
     }
 }
