--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -1,4 +1,4 @@
-upstream {{ item_key }} {
+upstream {{ item.key }} {
     {% for server in groups.webserver %}
         server {{ server }}:{{ item.value.backend }};
     {% endfor %}
@@ -8,6 +8,6 @@ server {
     listen {{ item.value.frontend }};
 
     location / {
-        proxy_pass http://{{ item_key }};
+        proxy_pass http://{{ item.key }};
     }
 }
